# weave

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml
docker/: Dockerfile.weave  Dockerfile.web  README.md  nginx.conf
migrations/: 001_init.sql  002_ddb_campaign.sql  003_campaign_ai_brief.sql  004_session_story.sql  005_session_memory.sql  006_session_viewer.sql  007_session_chronicle.sql  008_campaign_game_log.sql  (+2 more)
python/weave/: README.md  pyproject.toml
python/weave/src/weave/: __init__.py  chronicle.py  cli.py  config.py  db.py  deps.py  jobs.py  live.py  main.py  session_activity.py  tts.py  worker.py
python/weave/src/weave/agent/: __init__.py  chat_format.py  context.py  cursor_adapter.py  cursor_client.py  cursor_sessions.py  prompts.py  recap.py  session.py  suggestions.py  viewpoint.py
python/weave/src/weave/api/: __init__.py  router.py
python/weave/src/weave/ddb/: __init__.py  campaign.py  client.py  extract.py  gamelog.py  models.py  normalize.py  portraits.py
python/weave/src/weave/game_log/: __init__.py  sync.py
python/weave/src/weave/stt/: __init__.py  provider.py
python/weave/tests/: test_agent.py  test_agent_context.py  test_chat_format.py  test_chronicle.py  test_cursor_client.py  test_ddb_campaign.py  test_ddb_client_bearer.py  test_ddb_normalize.py  test_ddb_portraits.py  test_gamelog.py  test_prompts.py  test_recap.py  test_session_activity.py  test_suggestions.py  test_suggestions_prompt.py
python/weave/tests/fixtures/: legacy_sample.json  legacy_with_gear.json
web/: index.html  (+3 more)
(+39 files in other folders)
