[project]
name = "weave"
version = "0.1.0"
description = "Weave — live D&D session assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "openai>=1.54.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "redis>=5.0.0",
    "asyncpg>=0.29.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
stt = ["faster-whisper>=1.0.0"]
tts = ["edge-tts>=6.1.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "httpx>=0.27.0"]

[project.scripts]
weave = "weave.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weave"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
